# android-ndk-notes

./: .gitignore  .project  README  build.xml  log.txt  ndk-build-all.sh  settings.gradle
.externalToolBuilders/: Ant Builder.launch
DroidBlaster/: .cproject  .project  AndroidManifest.xml  basename.exe.stackdump  build.xml  dirname.exe.stackdump  uname.exe.stackdump
DroidBlaster/assets/: license.txt
DroidBlaster/jni/: Android.mk  Application.mk  Asteroid.cpp  Asteroid.hpp  Background.cpp  Background.hpp  Context.hpp  DroidBlaster.cpp  DroidBlaster.hpp  EventHandler.hpp  EventLoop.cpp  EventLoop.hpp  GraphicsObject.cpp  GraphicsObject.hpp  GraphicsService.cpp  GraphicsService.hpp  GraphicsSprite.cpp  GraphicsSprite.hpp  GraphicsTexture.cpp  GraphicsTexture.hpp  GraphicsTileMap.cpp  GraphicsTileMap.hpp  Log.cpp  (+17 more)
HelloApp/: .cproject  .project
LiveCamera/: .cproject  .project  local.properties
cpp11-support/: build.gradle
full-native-app/: build.gradle
full-native-app/src/main/jni/avilib/: Makefile.am
hello-debug/: build.gradle  jniheader.bat
hello-jni/: build.gradle  gradle.properties
jni/: Android.mk  Application.mk  com_example_helloapp_Store.c  com_example_helloapp_Store.h  hello.c  hello.h  store.c  store.h  store_watcher.c  store_watcher.h
local-socket/: build.gradle  jniheader.bat
native-graphics/: build.gradle  notes.md
native-threads/: build.gradle
posix-tcp-socket/: build.gradle
posix-udp-socket/: build.gradle  jniheader.bat
register-natives/: build.gradle  jniheader.bat
swig-cpp-sample/: build.gradle
swig-sample/: build.gradle
(+218 files in other folders)
